# baton

./: Cargo.toml
.github/workflows/: pr.yml  release.yml
baton/: CHANGELOG.md  Cargo.toml
baton-derive/: CHANGELOG.md  Cargo.toml
baton-derive/src/: lib.rs
baton/src/: closed.rs  derive.rs  lib.rs  recv.rs  send.rs  state.rs
src/: lib.rs
tests/: simple.rs
