[package]
name = "baton"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = "1"
tokio = { version = "1", features = ["sync"], default-features = false }

[dev-dependencies]
futures = "0.3"

[[test]]
name = "tests"
path = "tests/simple.rs"
