
[package]
name = "baton"
version = "0.1.0"
edition = "2021"

[features]
default = ["derive"]
derive = ["dep:baton-derive"]

[dependencies]
tokio = { version = "1", features = ["sync"], default-features = false }
baton-derive = { path = "../baton-derive", optional = true }

[dev-dependencies]
futures = "0.3"
